# Test5

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
accounts/migrations/: 0001_initial.py
config/: urls.py
config/settings/: base.py  dev.py  prod.py  test.py
core/: tests.py
paa/: __init__.py  admin.py  apps.py  imports.py  models.py  permissions.py  services.py
paa/management/commands/: paa_import_plan.py
paa/migrations/: 0001_initial.py
paa/tests/: test_models_and_services.py
