[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.1.0"
description = "Django project skeleton"
requires-python = ">=3.12"
dependencies = [
    "Django>=5,<6",
    "djangorestframework",
    "django-filter",
    "django-extensions",
    "django-axes",
    "django-guardian",
    "django-environ",
    "django-csp",
    "psycopg2-binary",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "factory_boy",
    "ruff",
    "black",
    "mypy",
]

[tool.setuptools]
packages = ["config", "core", "accounts", "paa"]

[tool.black]
line-length = 88
skip-string-normalization = false
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "B"]
extend-exclude = ["migrations"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
